fixed sections/main alignment

--- a/style/_general.scss
+++ b/style/_general.scss
@@ -13,6 +13,7 @@ body {
     position: relative;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 3rem;
 }
 
