--- a/style/_header.scss
+++ b/style/_header.scss
@@ -1,4 +1,5 @@
 header {
+    width: 100%;
     padding: .5rem 1rem;
     display: flex;
     justify-content: space-between;
